feat(structure): create libraries modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,8 @@ rootProject.name = "TMDB"
 include ':app'
 include ':domain'
 include ':data'
+include ':libraries:core'
+include ':libraries:navigation'
+include ':libraries:design_system'
+include ':libraries:res:strings'
+include ':libraries:res:drawables'
