feat(structure): create features modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ include ':libraries:navigation'
 include ':libraries:design_system'
 include ':libraries:res:strings'
 include ':libraries:res:drawables'
+include ':features:films:list'
+include ':features:films:details'
