--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
-ktx = "1.10.1"
-compose-bom = "2023.06.01"
+ktx = "1.12.0"
+compose-bom = "2024.02.02"
 compose-compiler = "1.4.7"
-compose-activty = "1.7.2"
-lifecycle = "2.6.1"
-workmanager = "2.8.1"
-coroutines = "1.7.1"
+compose-activty = "1.8.2"
+lifecycle = "2.7.0"
+workmanager = "2.9.0"
+coroutines = "1.8.0"
 appcompat = "1.6.1"
-koin = "3.4.2"
-koin-compose = "3.4.5"
-koin-ksp = "1.2.2"
+koin = "3.5.3"
+koin-compose = "3.5.3"
+koin-ksp = "1.3.1"
 androidGradlePlugin = "8.0.2"
-kotlin = "1.8.21"
-ksp = "1.8.21-1.0.11"
-room = "2.5.2"
-voyager = "1.0.0-rc05"
+kotlin = "1.9.22"
+ksp = "1.9.22-1.0.17"
+room = "2.6.1"
+voyager = "1.0.0"
 junit = "4.13.2"
 junit-ext = "1.1.5"
 espresso = "3.5.1"
